--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "type": "module",
   "homepage": "https://sidneimv.github.io/react_sass",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
     "dev": "vite",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
